<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/naruto">

<!--    <ImageView-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:contentDescription="@string/png"-->

<!--        android:layout_marginTop="40dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/solution_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:hint=""
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:paddingTop="50dp"
            android:background="@color/_gray"/>

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="textEnd"
            android:paddingTop="50dp"
            android:background="@color/_gray"/>



        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/C"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/C"
                android:layout_weight="1"
                android:backgroundTint="#ED0A0A"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/br1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/br1"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/br2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/br2"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/div"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/orange"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mult"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/x"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/orange"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sub"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/__"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/orange"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/orange"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/AC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/AC"
                android:layout_weight="1"
                android:backgroundTint="#F00B0B"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/orange"
                android:textSize="30sp"/>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>